--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.0.13
   otp_text_field: ^1.1.3
   badges: ^2.0.2
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
