--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   otp_text_field: ^1.1.3
   badges: ^2.0.2
   fluttertoast: ^8.0.9
+  wechat_assets_picker: ^7.3.0
+  
 
 dev_dependencies:
   flutter_test:
