--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   fluttertoast: ^8.0.9
   wechat_assets_picker: ^7.3.0
   image: ^3.2.0
+  flutter_image_compress: ^1.1.0
+  
   
 
 dev_dependencies:
