--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   image: ^3.2.0
   flutter_image_compress: ^1.1.0
   file_picker: ^4.6.1
-  android_intent_plus: ^3.1.1
+  share_plus: ^4.0.8
+  
   
   
   
