--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_image_compress: ^1.1.0
   file_picker: ^4.6.1
   share_plus: ^4.0.8
+  flutter_image_slideshow: ^0.1.2
   
   
   
