--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   share_plus: ^4.0.8
   flutter_image_slideshow: ^0.1.2
   qr_flutter: ^4.0.0
+  assets_audio_player: ^3.0.5
   
   
   
