--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -74,6 +74,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-    
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>Need to Save Image on Storage</string>
 </dict>
 </plist>
