--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,9 @@ dependencies:
   flutter_image_slideshow: ^0.1.2
   qr_flutter: ^4.0.0
   assets_audio_player: ^3.0.5
-  
-  
+  image_gallery_saver: ^1.7.1
+  dio: ^4.0.6
+  permission_handler: ^10.0.0
   
   
 
