--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,6 +49,8 @@
         <true/>
         <key>com.apple.security.network.client</key>
         <true/>
+        <key>io.flutter.embedded_views_preview</key>
+        <true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Need to upload image</string>
 	<key>NSMicrophoneUsageDescription</key>
