--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   dio: ^4.0.6
   permission_handler: ^10.0.0
   qr_code_scanner: ^1.0.0
+  random_password_generator: ^0.2.1
   
   
 
