--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   permission_handler: ^10.0.0
   qr_code_scanner: ^1.0.0
   random_password_generator: ^0.2.1
+  webview_flutter: ^3.0.4
   
   
 
