--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,8 +55,8 @@
 	<string>Need to upload image</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Need to upload image</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Replace with your permission description.</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>Need to Save Image on Storage</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -76,7 +76,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-    <key>NSPhotoLibraryAddUsageDescription</key>
-    <string>Need to Save Image on Storage</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs access to location when open.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app needs access to location when in the background.</string>
 </dict>
 </plist>
