--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:label="LINKMAN"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCPsf64UBObNOeC8RzTJwPrqeo5GXgqH0o"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
