--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,8 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '11.0'
+platform :ios, '14.0'
+
+# @available(iOS 10.0, *)
+# private(set) lazy var center = UNUserNotificationCenter.current()
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
